<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/home_activity_drawer_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".app.home.HomeActivity">

  <FrameLayout
...
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
      android:id="@+id/home_fragment_placeholder"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1" />
  </LinearLayout>

  <androidx.fragment.app.FragmentContainerView
...
