...
    <variable
      name="viewModel"
      type="org.oppia.android.app.drawer.NavigationDrawerHeaderViewModel" />
  </data>

  <LinearLayout
    android:id="@+id/header_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/component_color_shared_navbar_header_background_color"
    android:gravity="bottom"
    android:onClick="@{(v) -> viewModel.onHeaderClicked()}"
    android:orientation="vertical"
...
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedShape"
      app:profileImageSource="@{viewModel.profile.avatar}" />

    <TextView
      android:id="@+id/nav_header_profile_name"
      style="@style/TextViewStart"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:fontFamily="sans-serif-medium"
      android:text="@{viewModel.profile.name}"
...
