...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/component_color_shared_fragment_container_background_color"
        android:orientation="vertical">

        <com.google.android.material.navigation.NavigationView
          android:id="@+id/fragment_drawer_nav_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="start"
          android:background="@color/component_color_shared_fragment_container_background_color"
          android:overScrollMode="never"
          android:scrollbars="none"
...
            android:text="@string/developer_options"
            android:textColor="@{footerViewModel.isDeveloperOptionsSelected ? @color/component_color_drawer_fragment_developer_options_selected_text_color : @color/component_color_shared_primary_dark_text_color}"
            android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
          android:id="@+id/administrator_controls_linear_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:layout_marginBottom="36dp"
          android:orientation="horizontal"
          android:paddingStart="24dp"
...
